i added new 3 p tags

--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
     <p>I am a web developer.</p>
     <p>Welcome to my personal page!</p>
     <p>Feel free to explore and learn more about my work.</p>
+
+
+    <p>I am a sofware developer.</p>
+    <p>Welcome to my personal page!</p>
+    <p>Feel free to explore and learn more about my work.</p>
+
+
 </body>
 </html>
