--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <p>Feel free to explore and learn more about my work.</p>
 
 
-    <p>I am a sofware developer.</p>
+    <p>I am a software developer.</p>
     <p>Welcome to my personal page!</p>
     <p>Feel free to explore and learn more about my work.</p>
+
+    <p> free to explore and learn more about my work.</p>
 
 
 </body>
